# zerv-flow-demo-test

./: .gitignore  .pre-commit-config.yaml  .prettierrc.json  .releaserc.js  01-generalize-zerv-versioning-workflow.md  Cargo.toml  Makefile  README.md  TODO.md  codecov.yml  lock.json  sonar-project.properties  test  test-lock-robust.sh  test-lock.sh  test.md  test.sh  test_github_action_locally.sh  test_zerv_workflow.sh
.github/workflows/: cd.yml  check-pr-label-and-branch.yml  check-pr-label.yml  check-pr-labels-with-prefix.yaml  ci-pre-commit.yml  ci-push.yml  ci-test.yml  ci.yml  create-tag.yml  deploy-all-env.yml  deploy-env.yml  deploy-i.yml  deploy-no-env.yml  deploy.yml  lock.yml  pr-unlock.yml  pre-commit.yml  reusable-create-tags.yml  security.yml  semantic-pull-request.yml  semantic-release.yml  shared-pr-unlock.yml  test.yml  unlock-when-close.yml  unlock.yml  z-lock-pr.yml  z-lock-push.yml  z-lock.yml  z-reusable-lock.yml  z-reusable-unlock.yml  zerv-versioning.yml
src/: config.rs  lib.rs  main.rs  routes.rs  server.rs
