[package]
name = "zerv-flow-demo"
version = "0.1.0"
edition = "2024"

[lib]
name = "zerv_flow_demo"
path = "src/lib.rs"

[[bin]]
name = "zerv-flow-demo"
path = "src/main.rs"

[dependencies]
axum = "0.8"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.7", features = ["trace"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
axum-test = "18.4.1"
futures = "0.3.31"
reqwest = "0.12.24"
reserve-port = "2.3.0"
tokio-test = "0.4.4"
